@@ -13,6 +13,10 @@ cod-tools (unreleased)
        - fixed the decoding of accented characters sequences that consists of
          a base character encoded as a numeric character reference and a single
          combining character encoded as a CIF special code.
+    - cif.c:
+       - updated the datablock_print_tag_values() function to only assign
+         buffer space for an additional separator if the data block name
+         is actually provided.
 
 cod-tools (3.9.0)
 
